feat: add websocket realtime flow
